# char_to_line

./: CMakeLists.txt  README.md  set_env.sh
data/: test.prototxt  test_zf_gray.txt
include/: CommonUtil.h  DetectApi.h  TextCore.h  TextUtil.h  char_detector.hpp
output/: DetectApi.h
src/: CommonUtil.cpp  DetectApi.cpp  TextCore.cpp  TextUtil.cpp  char_detector.cpp
test/: test-main.cpp  test-specific.cpp  test_load_boxes.cpp  test_so.cpp  text_detect.cpp
