cmake_minimum_required(VERSION 2.8)
project( test-main )
include_directories(include)
find_package( OpenCV REQUIRED )
file(GLOB SOURCES "src/*")
add_executable(../output/test-main  test/test-main.cpp ${SOURCES})
add_executable(../output/test-specific  test/test-specific.cpp ${SOURCES})
target_link_libraries(../output/test-main ${OpenCV_LIBS} )
target_link_libraries(../output/test-specific ${OpenCV_LIBS} )
