PROJECT(text_detectiom)
cmake_minimum_required(VERSION 2.8.8)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
find_package( OpenCV REQUIRED )
find_package(Boost COMPONENTS system filesystem REQUIRED)
include_directories(/home/wangyuzhuo/wangyuzhuo/Experiments/faster-chn/caffe-fast-rcnn/include/)
include_directories(/usr/local/cuda-7.0/include/)
include_directories(/usr/include/)
include_directories(/usr/include/glog/)
include_directories(include/)
LINK_DIRECTORIES(/home/wangyuzhuo/wangyuzhuo/Experiments/faster-chn/caffe-fast-rcnn/build/lib/)
LINK_DIRECTORIES(./output/)
AUX_SOURCE_DIRECTORY(./src/ DIR_SRCS)
#file(GLOB SOURCES "src/Text*.cpp")
set(SOURCES src/TextCore.cpp src/TextUtil.cpp src/CommonUtil.cpp src/char_detector.cpp src/DetectApi.cpp)

#ADD_EXECUTABLE(DetectChar test/text_detect.cpp ${SOURCES})
ADD_LIBRARY(DetectLine_d SHARED ${SOURCES})
ADD_LIBRARY(DetectLine SHARED ${SOURCES})
ADD_EXECUTABLE(DetectChar test/test_so.cpp include/DetectApi.h)
target_link_libraries (DetectChar libDetectLine.so)
target_link_libraries (DetectChar ${OpenCV_LIBS})
target_link_libraries(DetectChar caffe.so)
target_link_libraries (DetectChar glog)
target_link_libraries(DetectChar ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(DetectChar ${Boost_SYSTEM_LIBRARY})

ADD_EXECUTABLE(DetectLoadChar test/test_load_boxes.cpp include/DetectApi.h)
target_link_libraries (DetectLoadChar libDetectLine.so)
target_link_libraries (DetectLoadChar ${OpenCV_LIBS})
target_link_libraries(DetectLoadChar caffe.so)
target_link_libraries (DetectLoadChar glog)
target_link_libraries(DetectLoadChar ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(DetectLoadChar ${Boost_SYSTEM_LIBRARY})

#ADD_EXECUTABLE(DetectChar test/text_detect.cpp ${SOURCES})
#add_library(test SHARED src/test.cpp)
#target_link_libraries (DetectChar ${OpenCV_LIBS})
#target_link_libraries (DetectChar glog)
#target_link_libraries(DetectChar ${Boost_FILESYSTEM_LIBRARY})
#target_link_libraries(DetectChar ${Boost_SYSTEM_LIBRARY})
#target_link_libraries(DetectChar caffe.so)

#add_executable(GenTextLinesAll  test/test-main.cpp ${SOURCES})
#add_executable(GenSingleLine  test/test-specific.cpp ${SOURCES})
#target_link_libraries(GenTextLinesAll ${OpenCV_LIBS} )
#target_link_libraries(GenSingleLine ${OpenCV_LIBS} )
